@@ -15,7 +15,7 @@ CAMLLEX=@OCAMLLEX@
 CAMLYACC=@OCAMLYACC@
 EXE=@EXE@
 
-USE_GL=@USE_GL@
+USE_GL=@USE_GTKGL@
 USE_GNOME=@USE_GNOME@
 USE_GLADE=@USE_GLADE@
 USE_RSVG=@USE_RSVG@
@@ -23,6 +23,7 @@ HAVE_SVGZ=@HAVE_SVGZ@
 USE_GNOMECANVAS=@USE_GNOMECANVAS@
 USE_GNOMEUI=@USE_GNOMEUI@
 USE_PANEL=@USE_PANEL@
+USE_GTKSPELL=@USE_GTKSPELL@
 USE_CC=@USE_CC@
 DEBUG=@DEBUG@
 CC=@CC@
@@ -70,3 +71,5 @@ GNOMEUI_LIBS = @GNOMEUI_LIBS@
 GNOMEUILIBS:=$(call clean_libs,$(GNOMEUI_LIBS))
 PANEL_LIBS = @PANEL_LIBS@
 PANELLIBS:=$(call clean_libs,$(PANEL_LIBS))
+GTKSPELL_LIBS = @GTKSPELL_LIBS@
+GTKSPELLLIBS:=$(call clean_libs,$(GTKSPELL_LIBS))
