@@ -17,9 +17,9 @@
 
 # the script generated by autoconf from this input will set the following
 # variables:
-#   OCAMLC        "ocamlc" if present in the path, or a failure
+#    CAMLC        "ocamlc" if present in the path, or a failure
 #                 or "ocamlc.opt" if present with same version number as ocamlc
-#   OCAMLOPT      "ocamlopt" (or "ocamlopt.opt" if present), or "no"
+#    CAMLOPT      "ocamlopt" (or "ocamlopt.opt" if present), or "no"
 #   OCAMLBEST     either "byte" if no native compiler was found, 
 #                 or "opt" otherwise
 #   OCAMLDEP      "ocamldep"
@@ -204,17 +204,32 @@ fi
 GTKPKG=gtk+-2.0 
 AM_PATH_GTK_2_0()
 
-PKG_CHECK_MODULES(GTK,$GTKPKG)
+dnl LABLGTK_PKG(variable, autoconf package, help string, pkgconfig package)
+AC_DEFUN([LABLGTK_PKG], [
+AC_ARG_WITH($2,[$3],USE_$1=$withval; FORCE_$1=yes, USE_$1=yes; FORCE_$1=no)
+if test $USE_$1 = yes ; then
+	PKG_CHECK_MODULES($1,$4,,[
+	if test $FORCE_$1 = yes ; then
+	  AC_MSG_ERROR($2 enforced but no support found)
+	else
+	  AC_MSG_RESULT(no)
+	USE_$1=no
+	fi])
+fi
+if test $USE_$1 = yes ; then
+	USE_$1=1
+	$1[]PKG=$4
+else
+	unset USE_$1
+fi
+AC_SUBST(USE_$1)])
 
-FORCE_GL=no
-AC_ARG_WITH(gl, 
-        [  --without-gl            override autodetected GtkGLArea support. Requires LablGL],
-	USE_GL=$withval; FORCE_GL=yes;,
-	USE_GL=yes)
-AC_ARG_WITH(lablGL-dir,[  --with-lablGL-dir=DIR	  specify location of lablGL],
-        LABLGLDIR="$withval")
 
-if test $USE_GL = yes ; then
+LABLGTK_PKG(GTKGL, gl,
+	    [  --without-gl            override autodetected GtkGLArea support. Requires LablGL],
+	    gtkgl-2.0)
+# Check for LablGL
+if test -n "$USE_GTKGL" ; then
       AC_MSG_CHECKING(lablGL directory)
       cat > conftest.ml << EOF
       open Raw
@@ -222,150 +237,55 @@ EOF
       if $CAMLC -c -I "${LABLGLDIR:=+lablGL}" conftest.ml > /dev/null 2>&1 ; then
         AC_MSG_RESULT($LABLGLDIR)
       else
-        if test $FORCE_GL = yes ; then
+        if test $FORCE_GTKGL = yes ; then
 	  AC_MSG_ERROR(gtkgl enforced but lablGL not found)
 	else
 	  AC_MSG_RESULT(no)
-      	  USE_GL=no
+      	  unset USE_GTKGL
+	  unset GTKGLPKG
           unset LABLGLDIR
 	fi
       fi
 fi
-if test $USE_GL = yes ; then
-	PKG_CHECK_MODULES(GTKGL,gtkgl-2.0,,
-	if test $FORCE_GL = yes ; then
-	AC_MSG_ERROR(gtkgl enforced but support not found)
-	else
-	AC_MSG_RESULT(no)
-	USE_GL=no
-	fi)
-fi
-if test $USE_GL = yes ; then
-    USE_GL=1
-    GTKGLPKG=gtkgl-2.0
+
+LABLGTK_PKG(GLADE, glade,
+            [  --without-glade         override autodetected libglade support],
+            libglade-2.0)
+
+LABLGTK_PKG(RSVG, rsvg,
+            [  --without-rsvg          override autodetected librsvg support],
+            librsvg-2.0)
+# Check for SVGZ support
+if test -n "$USE_RSVG" ; then
+    ac_ocaml_libs="$LIBS"
+    LIBS="$LIBS $RSVG_LIBS"
+    AC_CHECK_FUNC(rsvg_handle_new_gz, [HAVE_SVGZ=-DHAVE_SVGZ], [unset HAVE_SVGZ])
+    LIBS="$ac_ocaml_libs"
 else
-    USE_GL=
+    unset HAVE_SVGZ
 fi
 
-FORCE_GLADE=no
-AC_ARG_WITH(glade, 
-        [  --without-glade         override autodetected libglade support],
-	USE_GLADE=$withval; FORCE_GLADE=yes;,
-	USE_GLADE=yes)
+LABLGTK_PKG(GNOMECANVAS, gnomecanvas,
+            [  --without-gnomecanvas   override autodetected libgnomecanvas support],
+            libgnomecanvas-2.0)
 
-if test $USE_GLADE = yes ; then
-	PKG_CHECK_MODULES(GLADE,libglade-2.0,,
-	if test $FORCE_GLADE = yes ; then
-	AC_MSG_ERROR(libglade enforced but no support found)
-	else
-	AC_MSG_RESULT(no)
-	USE_GLADE=no
-	fi)
-fi
-if test $USE_GLADE = yes ; then
-    USE_GLADE=1
-    GLADEPKG=libglade-2.0
-else
-    USE_GLADE=
-fi
+LABLGTK_PKG(GNOMEUI, gnomeui,
+            [  --without-gnomeui       override autodetected libgnomeui support],
+            libgnomeui-2.0)
 
-FORCE_RSVG=no
-AC_ARG_WITH(rsvg, [  --without-rsvg          override autodetected librsvg support],
-	USE_RSVG=$withval; FORCE_RSVG=yes;,
-	USE_RSVG=yes)
+LABLGTK_PKG(PANEL, panel,
+            [  --without-panel         override autodetected libpanelapplet support],
+            libpanelapplet-2.0)
 
-if test $USE_RSVG = yes ; then
-    	PKG_CHECK_MODULES(RSVG,librsvg-2.0,,
-	if test $FORCE_RSVG = yes ; then
-	AC_MSG_ERROR(librsvg enforced but support not found)
-	else
-	AC_MSG_RESULT(no)
-	USE_RSVG=no
-	fi)
-fi
-if test $USE_RSVG = yes ; then
-    USE_RSVG=1
-    RSVGPKG=librsvg-2.0
-    LIBS=$RSVG_LIBS
-    AC_CHECK_FUNC(rsvg_handle_new_gz, [HAVE_SVGZ=-DHAVE_SVGZ], [HAVE_SVGZ=])
-else
-    USE_RSVG=
-    HAVE_SVGZ=
-fi
+LABLGTK_PKG(GTKSPELL, gtkspell,
+            [  --without-gtkspell      override autodetected gtkspell support],
+            gtkspell-2.0)
 
-
-FORCE_GNOMECANVAS=no
-AC_ARG_WITH(gnomecanvas,
-        [  --without-gnomecanvas   override autodetected libgnomecanvas support],
-	USE_GNOMECANVAS=$withval ; FORCE_GNOMECANVAS=yes,
-	USE_GNOMECANVAS=yes)
-
-if test $USE_GNOMECANVAS = yes ; then
-    PKG_CHECK_MODULES(GNOMECANVAS,libgnomecanvas-2.0,,
-	if test $FORCE_GNOMECANVAS = yes ; then
-	AC_MSG_ERROR(libgnomecanvas enforced but support not found)
-	else
-	AC_MSG_RESULT(no)
-	USE_GNOMECANVAS=no
-	fi)
-fi
-if test $USE_GNOMECANVAS = yes ; then
-    USE_GNOMECANVAS=1
-    GNOMECANVASPKG=libgnomecanvas-2.0
-else
-    USE_GNOMECANVAS=
-fi
-
-FORCE_GNOMEUI=no
-AC_ARG_WITH(gnomeui,
-        [  --without-gnomeui   override autodetected libgnomeui support],
-	USE_GNOMEUI=$withval ; FORCE_GNOMEUI=yes,
-	USE_GNOMEUI=yes)
-
-if test $USE_GNOMEUI = yes ; then
-    PKG_CHECK_MODULES(GNOMEUI,libgnomeui-2.0,,
-	if test $FORCE_GNOMEUI = yes ; then
-	AC_MSG_ERROR(libgnomeui enforced but support not found)
-	else
-	AC_MSG_RESULT(no)
-	USE_GNOMEUI=no
-	fi)
-fi
-if test $USE_GNOMEUI = yes ; then
-    USE_GNOMEUI=1
-    GNOMEUIPKG=libgnomeui-2.0
-else
-    USE_GNOMEUI=
-fi
-
-
-FORCE_PANEL=no
-AC_ARG_WITH(panel,
-        [  --without-panel     override autodetected libpanelapplet support],
-	USE_PANEL=$withval ; FORCE_PANEL=yes,
-	USE_PANEL=yes)
-
-if test $USE_PANEL = yes ; then
-    PKG_CHECK_MODULES(PANEL,libpanelapplet-2.0,,
-	if test $FORCE_PANEL = yes ; then
-	AC_MSG_ERROR(libpanel-applet enforced but support not found)
-	else
-	AC_MSG_RESULT(no)
-	USE_PANEL=no
-	fi)
-fi
-if test $USE_PANEL = yes ; then
-    USE_PANEL=1
-    PANELPKG=libpanelapplet-2.0
-else
-    USE_PANEL=
-fi
-
-PKG_CHECK_MODULES(GTKALL,$GTKPKG $GTKGLPKG $GLADEPKG $RSVGPKG $GNOMECANVASPKG $GNOMEUIPKG $PANELPKG)
+PKG_CHECK_MODULES(GTKALL,$GTKPKG $GTKGLPKG $GLADEPKG $RSVGPKG $GNOMECANVASPKG $GNOMEUIPKG $PANELPKG $GTKSPELLPKG)
 
 AC_ARG_ENABLE(debug,
         [  --enable-debug          enable debug mode],
-	echo "Debug mode enabled" ; DEBUG=1,
+	AC_MSG_RESULT(Debug mode enabled) ; DEBUG=1,
 	DEBUG=)
 
 # substitutions to perform
@@ -388,22 +308,15 @@ AC_SUBST(CAMLMKTOP)
 AC_SUBST(CAMLMKLIB)
 AC_SUBST(CAMLP4O)
 AC_SUBST(LABLGLDIR)
-AC_SUBST(USE_GL)
-AC_SUBST(USE_GNOME)
-AC_SUBST(USE_GLADE)
-AC_SUBST(USE_RSVG)
 AC_SUBST(HAVE_SVGZ)
-AC_SUBST(USE_GNOMECANVAS)
-AC_SUBST(USE_GNOMEUI)
-AC_SUBST(USE_PANEL)
 AC_SUBST(USE_CC)
-AC_SUBST(DEBUG)			  
+AC_SUBST(DEBUG)
 
 # Finally create the config.make from config.make.in
 AC_OUTPUT(config.make)
 chmod a-w config.make
 
-AC_DEFUN(CONF_SUMMARY, [
+AC_DEFUN([CONF_SUMMARY], [
 echo -n "	$1	"
 if test -n "$USE_$2"
 then echo "yes"
@@ -414,12 +327,13 @@ else if test "$FORCE_$2" = "yes"
 fi])
 
 echo ; echo "LablGTK configuration:"
-CONF_SUMMARY(GtkGLArea, GL)
+CONF_SUMMARY(GtkGLArea, GTKGL)
 CONF_SUMMARY(libglade, GLADE)
 CONF_SUMMARY(librsvg , RSVG)
 CONF_SUMMARY(libgnomecanvas, GNOMECANVAS)
 CONF_SUMMARY(libgnomeui, GNOMEUI)
 CONF_SUMMARY(libpanelapplet, PANEL)
+CONF_SUMMARY(gtkspell, GTKSPELL)
 echo
 echo -n  "	debug   	"
 if test -n "$DEBUG" ; then echo "yes" ; else echo "no" ; fi
