@@ -2,6 +2,7 @@ $Id$
 
 2004.11.15 [Olivier]
   * add max-position and min-position in GPack.paned (2.4)
+  * add GtkSpell interface (http://gtkspell.sf.net/)
 
 2004.11.10 [Olivier]
   * add GPack.paned#position
